--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -9,20 +9,15 @@
         @apply m-[0px] p-[0px]
     }
     body {
-        @apply font-noto;
-    }
-    html {
+        @apply font-noto h-full;
         background-image: linear-gradient(180deg, #EBF2FC 0%, #EEF8F9 100%);
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: cover;
     }
 
-    html.dark {
+    html.dark body {
         background-image: linear-gradient(180deg, #040918 0%, #091540 100%);
-    }
-    html, body {
-    @apply h-full;
     }
     a {
         text-decoration: none;
